--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-MONGODB_URI = mongodb://root:upstackroot1@ds241664.mlab.com:41664/upstack
+MONGODB_URI_PRODUCTION = mongodb://root:upstackroot1@ds241664.mlab.com:41664/upstack
+MONGODB_URI_DEVELOPMENT = mongodb://root:upstackroot1@ds241664.mlab.com:41664/upstack
+MONGODB_URI_TEST = mongodb://root:upstackroot1@ds241664.mlab.com:41664/upstack_test
+
 EMAIL_USER = rodriguez.bender.robot@gmail.com
 EMAIL_PASSWORD = kPIycFG)4A7=
 JWT_SECRET =  jdkbwucn4y8uw9uew982348u23urhnfxhefhy
