--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "pug": "^2.0.3",
     "uuid": "^3.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "superagent": "^4.0.0",
+    "supertest": "^3.3.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "SET NODE_ENV=test& mocha",
     "start": "nodemon app.js"
   },
   "keywords": [],
